Add some changes

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,11 +10,11 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: postgres
+  adapter: postgresql
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: 123123
+  username: mayank
+  password:
 
 development:
   <<: *default
